# onecrawler-backend-python

./: .env.example  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_users.py  0003_users_name_and_type_check.py  0004_add_settings.py  0007_crawl_job_user_id.py  0008_settings_user_id.py  0009_refresh_sessions.py
src/api/security/: dependencies.py  router.py
src/api/security/verify/: schema.py
src/api/users/: crud.py  router.py
src/api/users/account/: router.py  schema.py
src/api/users/login/: router.py  schema.py
src/api/users/logout/: router.py  schema.py
src/api/users/refresh/: router.py  schema.py
src/api/users/register/: router.py  schema.py
src/api/users/sessions/: router.py  schema.py
src/api/v1/: router.py
src/api/v1/crawler/: crud.py  router.py  schema.py
src/api/v1/dashboard/: __init__.py  router.py  schema.py
src/api/v1/data/: crud.py  router.py  schema.py
src/api/v1/settings/: __init__.py  crud.py  router.py  schema.py
src/core/: config.py  pool.py  security.py  sessions.py
src/db/: models.py
src/worker/: settings_builder.py  tasks.py
