[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onecrawler-backend"
version = "0.1.0"
description = "FastAPI backend for the OneCrawler application."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "pyjwt>=2.9.0",
    "argon2-cffi>=23.1.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
worker = ["onecrawler @ git+https://github.com/sayedshaun/onecrawler.git"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
